--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    ext {
+        junitJupiterVer = '5.3.2'
+        emailNotification = 'kkuroo@gmail.com'
+    }
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.1.18.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -20,7 +27,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'junit', module: 'junit'
+    }
+
+	testImplementation  "org.junit.jupiter:junit-jupiter-api:${junitJupiterVer}"
+	testImplementation  "org.junit.jupiter:junit-jupiter-params:${junitJupiterVer}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVer}"
 }
 
 test {
