added actuator/info by gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# info, git container build info
+management.endpoint.info.enabled=true
+management.info.git.mode=full
+management.info.build.enabled=false
+
 # metrics for prometheus scrape
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
