--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
 }
 
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.1.18.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id "com.gorylenko.gradle-git-properties" version "2.2.4"
 }
 
 group = 'net.kkuroo'
@@ -47,6 +48,19 @@ bootRun {
     systemProperty "spring.profiles.active", activeProfile
 }
 
-bootJar{
+bootJar {
     archiveName = "${jar.baseName}.${jar.extension}"
+}
+
+gitProperties {
+    keys = [
+        'git.branch',
+        'git.dirty',
+        'git.commit.time',
+        'git.commit.id.abbrev',
+        'git.commit.message.full',
+        'git.commit.user.name',
+        'git.commit.user.email',
+        'git.build.version'
+    ]
 }
